refactor: convert AggregationResult to a class and apply Lombok annotations for improved readability